--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -4,7 +4,7 @@
 			<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
 			<div class="header-intro col-xs-12">
 				<div class="row">
-					<p class="pull-left">Easy one step login!</p>
+					<p class="pull-left">Welcome back!</p>
 					<div class="plane pull-right"><img src="assets/images/loginPlane.png"></div>
 				</div>
 			</div>
