--- a/app/modules/goals/modules/automobile/views/automobileStarted.html
+++ b/app/modules/goals/modules/automobile/views/automobileStarted.html
@@ -5,11 +5,11 @@
                 <img src="assets/images/automobile.png">
             </div>
             <h1 class="pull-left slider-description">Automobile</h1>
-            <h2 class="pull-left">Drive around in style! Save for your dream wheels and let finances<span class="nextline">not force you to make a compromise</span></span></h2>
+            <h2 class="pull-left"><strong><i>Drive around in style!</i></strong><span class="nextline paddingTop2"> Save for your dream wheels and let finances not<span class="nextline">force you to make a compromise</span></span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
             <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
