--- a/app/modules/goals/modules/others/views/othersStarted.html
+++ b/app/modules/goals/modules/others/views/othersStarted.html
@@ -5,7 +5,8 @@
                 <img src="assets/images/others.png">
             </div>
             <h1 class="pull-left slider-description">Others</h1>
-            <h2 class="pull-left">Dont have your goal covered in our list? Looks like you are up to something interesting.<span class="nextline">But what is the goal without a plan anyway. Plan away for anything you want,</span><span class="nextline">and let finances not force you to make a compromise.</span></h2>
+            <!-- <h2 class="pull-left">Dont have your goal covered in our list? Looks like you are up to something interesting.<span class="nextline">But what is the goal without a plan anyway. Plan away for anything you want,</span><span class="nextline">and let finances not force you to make a compromise.</span></h2> -->
+            <h2 class="pull-left"><strong><i>I want to go nowhere and do nothing – said someone who didn’t want to tell you anything!</i></strong><span class="nextline paddingTop2">Don’t have your goal covered in our list? Looks like you are up to <span class="nextline"> something interesting. Plan away, and let finances<span class="nextline"> not force you to make a compromise.</span></span></span></h2>
         </div>                
 <!--         <div class="radio-cover">
             <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to select my target savings for my goal,show me how much i need to save every month</label>
