--- a/app/modules/goals/modules/retirement/views/retirementStarted.html
+++ b/app/modules/goals/modules/retirement/views/retirementStarted.html
@@ -5,11 +5,12 @@
                 <img src="assets/images/retirementInner.png">
             </div>
             <h1 class="pull-left slider-description">Retirement</h1>
-            <h2 class="pull-left">Everyone retires at some point and life continues, so it better be comfortable!</span></h2>
+            <!-- <h2 class="pull-left">Everyone retires at some point and life continues, so it better be comfortable!</span></h2> -->
+            <h2 class="pull-left"><strong><i>Retirement means doing what you want, when you want – but only if you have saved enough!</i></strong><span class="nextline paddingTop2">Save for your dream retirement and let finances not force you to make a compromise.</span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
             <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
