--- a/app/modules/goals/modules/vacation/views/vacationStarted.html
+++ b/app/modules/goals/modules/vacation/views/vacationStarted.html
@@ -5,7 +5,8 @@
                 <img src="assets/images/vacation.png">
             </div>
             <h1 class="pull-left slider-description">Vacation</h1>
-            <h2 class="pull-left">Life is a trip,and everyone needs vacations.Invest for the next dream vacation<span class="nextline">you always wanted,and let finances not force you to make a compromise.</span></span></h2>
+           <!--  <h2 class="pull-left">Life is a trip,and everyone needs vacations.Invest for the next dream vacation<span class="nextline">you always wanted,and let finances not force you to make a compromise.</span></span></h2> -->
+           <h2 class="pull-left"><strong><i>Life is a trip, lets plan the next vacation!</i></strong><span class="nextline paddingTop2">Invest for your next dream vacation and let <span class="nextline">finances not force you to make a compromise.</span></span></h2>
         </div>                
         <div class="radio-cover">
             <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
