--- a/app/modules/goals/modules/wedding/views/weddingStarted.html
+++ b/app/modules/goals/modules/wedding/views/weddingStarted.html
@@ -5,11 +5,12 @@
                 <img src="assets/images/wedding.png">
             </div>
             <h1 class="pull-left slider-description">Wedding</h1>
-            <h2 class="pull-left">Wedding are made in heaven.But the cost of that comes from your hard earned savings!<span class="nextline">Invest for the dream wedding you always wanted for loved ones,</span><span class="nextline">and let finances not force you to make a compromise.</span></h2>
+            <!-- <h2 class="pull-left">Wedding are made in heaven.But the cost of that comes from your hard earned savings!<span class="nextline">Invest for the dream wedding you always wanted for loved ones,</span><span class="nextline">and let finances not force you to make a compromise.</span></h2> -->
+            <h2 class="pull-left"><strong><i>Marriages are made in heaven, but weddings are quite worldly affairs!</i></strong><span class="nextline paddingTop2">Invest for that dream wedding you always wanted for yourself or your loves ones, <span class="nextline">and let finances not force you to make a compromise.</span></span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
             <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
