--- a/app/modules/planinvestment/modules/quickInvest/views/quickInvestStart.html
+++ b/app/modules/planinvestment/modules/quickInvest/views/quickInvestStart.html
@@ -5,11 +5,12 @@
                 <img src="assets/images/planInvestMent.png">
             </div>
             <h1 class="pull-left slider-description">Quick Invest</h1>
-            <h2 class="pull-left">Build wealth through setting up monthly SIP investment (Systematic Investment Plan)<span class="nextline">and/or make a one-time investment (Lumpsum)</span></h2>
+
+            <h2 class="pull-left"><strong><i>You can’t find returns in investments you haven’t made!</i></strong><span class="nextline paddingTop2">Simply choose your preferred mode of investment and</span><span class="nextline">amount and we will do the rest.</span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I only want to make monthly investments</label>
-            <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I only want to make one-time investment</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to make monthly investments (SIP)</label>
+            <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I want to make a one-time investment (Lumpsum)</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
