--- a/app/modules/planinvestment/modules/taxsaving/views/taxsavingStarted.html
+++ b/app/modules/planinvestment/modules/taxsaving/views/taxsavingStarted.html
@@ -5,8 +5,9 @@
                 <img src="assets/images/saveTax.png">
             </div>
             <h1 class="pull-left slider-description">Save Tax</h1>
-            <h2 class="pull-left">Nothing is certain except death and taxes.In fact taxes are to be paid<span class="nextline">over and over again! Invest in ELLS(Equity Linked Savings Schemes) funds,</span>
-            <span class="nextline">and save taxes under section 80C up o <span class="currency">&#8377</span> 46,350.</span></h2>
+            <!-- <h2 class="pull-left">Nothing is certain except death and taxes.In fact taxes are to be paid<span class="nextline">over and over again! Invest in ELLS(Equity Linked Savings Schemes) funds,</span>
+            <span class="nextline">and save taxes under section 80C up o <span class="currency">&#8377</span> 46,350.</span></h2> -->
+            <h2 class="pull-left"><strong><i>Nothing is certain except death and taxes. In fact taxes are to be paid every year!</i></strong><span class="nextline paddingTop2">Invest now in ELSS (Equity Linked Savings Schemes) and save taxes while you build wealth.</span></h2>
         </div>                
         <div class="col-xs-12">
             <div class="row">
