--- a/app/modules/registerinvestor/views/registerInvestorReview.html
+++ b/app/modules/registerinvestor/views/registerInvestorReview.html
@@ -7,7 +7,7 @@
             <h1 class="pull-left slider-description">Review Information</h1>
             <h2 class="pull-left">Please review the information provided</h2>    
         </div>	
-        <div class="col-xs-4 no-padding reviewList">
+        <div class="col-xs-12 col-lg-4 no-padding reviewList">
 	        <div class="col-xs-6 no-padding">
 	        	<p ng-click="($root.redirectUrlContext='/registerInvestorReview')" click-redirect="/investorInfo"><span class="content">- Investor Info</span></p>
 	        	<p ng-click="($root.redirectUrlContext='/registerInvestorReview')" click-redirect="/identityInfo"><span class="content">- Identity Info</span></p>
