--- a/app/modules/smartportfolio/views/schemeComparision.html
+++ b/app/modules/smartportfolio/views/schemeComparision.html
@@ -189,6 +189,6 @@
 		</div>	
 	</div>
 	<div class="fin-btn-group addMargin">
-	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+	    <button click-redirect="/compareAndModify" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 	</div>
 </section>
