--- a/less/calendar.less
+++ b/less/calendar.less
@@ -41,6 +41,9 @@
 			min-height:56px;
 			img{
 				width:35%;
+				@media @below768{
+					width: 19%;
+				}
 			}
 			span{
 				display:inline-block;
