--- a/less/login.less
+++ b/less/login.less
@@ -13,6 +13,9 @@
 	background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
 	box-shadow: 2.5pt 4.33pt 10pt 0pt rgb( 36, 122, 188 );
 	padding:6% 2.7% 3% 2.7%;
+	@media @below768{
+		border-radius: 26px;
+	}
 	.login-header{
 		.cloud1,.cloud2{
 			position:absolute;
