--- a/app/modules/common/views/header.html
+++ b/app/modules/common/views/header.html
@@ -9,7 +9,7 @@
           <li class="pull-right"><a href="javascript:void(0)" class="fin-link menu">MENU <span class="menu-icon"></span></a></li>
             <li class="pull-right" ng-if="!menu && !loggedIn"><a href="javascript:void(0)" click-redirect="/" class="fin-link log-in">LOG IN</a></li>
             <li class="pull-right" ng-if="(!getStarted && !menu) && !loggedIn"><a click-redirect="/gettingStarted" href="javascript:void(0)" class="fin-btn start-btn">GET STARTED</a></li>
-            <li ng-if="(getStarted && !menu) && !loggedIn"><p>Already have an account?</p></li>
+            <li class="pull-right" ng-if="(getStarted && !menu) && !loggedIn"><p>Already have an account?</p></li>
             
             <li ng-if="loggedIn" class="dropdown fin-dropdown pull-right text-right"><a href="javascript:void(0)" class="fin-link log-in" data-toggle="dropdown"><span class="label">Logged in as </span><span class="name" ng-bind="userDetails.user['name']" ng-if="(userDetails.user['name'] !='')"></span>
             <span class="name" ng-bind="userDetails.user['email']" ng-if="(userDetails.user['email'] !='')&&(userDetails.user['name'] =='')"></span><span class="up"></span><span class="down"></span></a>
