--- a/app/modules/goals/modules/education/views/educationStarted.html
+++ b/app/modules/goals/modules/education/views/educationStarted.html
@@ -5,11 +5,12 @@
                 <img src="assets/images/education.png">
             </div>
             <h1 class="pull-left slider-description">Education</h1>
-            <h2 class="pull-left">Education makes a woman. Save for your child's (or your)<span class="nextline">dream education and let finances not force you to make a compromise.</span></span></h2>
+            <!-- <h2 class="pull-left">Education makes a woman. Save for your child's (or your)<span class="nextline">dream education and let finances not force you to make a compromise.</span></h2> -->
+            <h2 class="pull-left"><strong><i>An investment in knowledge pays the best interest!</i></strong><span class="nextline paddingTop2">Save for your child (or your) dream education and let finances<span class="nextline">not force you to make a compromise.</span></span></h2>
         </div>                
         <div class="radio-cover">
-            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
             <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
+            <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
         </div>
         <div class="col-xs-12">
             <div class="row">
