--- a/app/modules/goals/modules/jewellery/views/jewelleryStarted.html
+++ b/app/modules/goals/modules/jewellery/views/jewelleryStarted.html
@@ -5,7 +5,8 @@
                 <img src="assets/images/luxurious.png">
             </div>
             <h1 class="pull-left slider-description">Jewellery</h1>
-            <h2 class="pull-left">Pamper yourself with some fashionable jewellery and let finances<span class="nextline">not force you to make a compromise</span></span></h2>
+            <!-- <h2 class="pull-left">Pamper yourself with some fashionable jewellery and let finances<span class="nextline">not force you to make a compromise</span></span></h2> -->
+            <h2 class="pull-left"><strong><i>I have enough jewellery – said no one ever</i></strong><span class="nextline paddingTop2">Save and invest for that fantastic jewellery you always<span class="nextline">wanted, and let finances not force you to make a compromise.</span></span></h2>
         </div>                
         <div class="radio-cover">
             <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
