--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -20,7 +20,8 @@
 					<button ng-click="startGoalAdd('invest')" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
 				</div>
 				<div class="col-xs-12 desc">
-					<p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment.</span></p>
+					<!-- <p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment.</span></p> -->
+					<p class="text-center">Don’t want to plan? Zip to make a quick investment.</p>
 					<h3 class="text-center"><span class="currency">&#8377</span>{{(quickInvestAmt | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
@@ -40,7 +41,8 @@
 					<button ng-click="startGoalAdd('tax')" class="fin-app-btn fin-blue full-width">Save Tax</button>
 				</div>
 				<div class="col-xs-12 desc">
-					<p class="text-center">Invest in Equity Linked Savings Schemes<span class="nextline">(ELSS) and save taxes under section</span><span class="nextline">80C.</span></p>
+					<!-- <p class="text-center">Invest in Equity Linked Savings Schemes<span class="nextline">(ELSS) and save taxes under section</span><span class="nextline">80C.</span></p> -->
+					<p class="text-center">Invest in best performing ELSS funds & save taxes under Section 80C.</p>
 					<h3 class="text-center"><span class="currency">&#8377</span>{{(taxAmtInvested | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
@@ -56,7 +58,8 @@
 					<button click-redirect="/goals" class="fin-app-btn fin-blue full-width">Set Financial Goals</button>
 				</div>
 				<div class="col-xs-12 desc">
-					<p class="text-center">Save for a financial goal like Retirement,<span class="nextline">Education, Vacation, etc.</span></p>
+					<!-- <p class="text-center">Save for a financial goal like Retirement,<span class="nextline">Education, Vacation, etc.</span></p> -->
+					<p class="text-center">Set up goals like retirement, children’s education, etc. with guided advice.</p>
 					<h3 class="text-center"><span class="currency">&#8377</span>{{(finGoalsAmt | amountSeffix) || 0}} annual investment</h3>
 				</div>				
 			</div>
@@ -76,7 +79,8 @@
 					<button class="fin-app-btn fin-blue full-width" ng-click="startGoalAdd('liquid')">Earn Higher Interest</button>
 				</div>
 				<div class="col-xs-12 desc">
-					<p class="text-center">Conveniently park your money in<span class="nextline">smarter mutual fund alternatives than</span><span class="nextline">traditional bank accounts.</span></p>
+					<!-- <p class="text-center">Conveniently park your money in<span class="nextline">smarter mutual fund alternatives than</span><span class="nextline">traditional bank accounts.</span></p> -->
+					<p class="text-center">Invest in Liquid Funds to earn higher interest than Savings Bank.</p>
 					<h3 class="text-center"><span class="currency">&#8377</span>{{(liqAmtInvested | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
