--- a/app/modules/registration/views/register.html
+++ b/app/modules/registration/views/register.html
@@ -1,9 +1,25 @@
 <section class="fadeIn register">
+  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc visible-xs">
+    <div class="row">
+    	<header class="contact-header col-xs-12">
+			<div class="row">
+				<div class="cloud1"><img src="assets/images/contact_cloud1.png"></div>
+				<div class="header-intro col-xs-12">
+					<div class="row">
+						<p class="pull-left">We are happy to have you</p>
+						<div class="plane pull-right"><img src="assets/images/loginPlane.png"></div>
+					</div>
+				</div>
+				<div class="cloud2"><img src="assets/images/contact_cloud2.png"></div>
+			</div>
+		</header>
+    </div>
+  </div>
   <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
     <div class="row">
       <div class="col-xs-12">
       	<div class="row">
-      		<div class="col-xs-10">
+      		<div class="col-xs-12 col-lg-10">
 	      		<div class="contact-form">
 	      			<form name="registerForm" novalidate>
 	      				<div class="form-group">
@@ -64,7 +80,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc">
+  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc hidden-xs">
     <div class="row">
     	<header class="contact-header col-xs-12">
 			<div class="row">
