--- a/less/common.less
+++ b/less/common.less
@@ -866,7 +866,7 @@ button[disabled]{
 }
 .selectRisk_cover{
 	
-    float: left;
+
     margin-bottom: 2%;
 	input[type="radio"],input[type="checkbox"] {
 	    display:none;
@@ -878,24 +878,27 @@ button[disabled]{
           	margin-bottom:2%;
           	opacity:0.5;
 	    	.assessNumber{
-		    	        cursor: pointer;
-						position: relative;
-		    -webkit-border-radius: 25px;
-		    width: 44px;
-		    height: 44px;
-		    text-align: center;
-		    background-repeat: no-repeat;
-		    -moz-border-radius: 25px;
-		    border-radius: 17px;
-		    margin-bottom: 12%;
-		    padding-top: 27%;
-		    background-image: -moz-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
-		    background-image: -webkit-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
-		    -webkit-box-shadow: 1px 5.33px 11px -4px #247abc;
-		    -moz-box-shadow: 1px 5.33px 11px -4px #247abc;
-		    box-shadow: 1px 5.33px 11px -4px #247abc;
-		    color: #f26529;
-
+		        cursor: pointer;
+				position: relative;
+			    -webkit-border-radius: 25px;
+			    width: 44px;
+			    height: 44px;
+			    text-align: center;
+			    background-repeat: no-repeat;
+			    -moz-border-radius: 25px;
+			    border-radius: 17px;
+			    margin-bottom: 12%;
+			    padding-top: 27%;
+			    background-image: -moz-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+			    background-image: -webkit-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+			    -webkit-box-shadow: 1px 5.33px 11px -4px #247abc;
+			    -moz-box-shadow: 1px 5.33px 11px -4px #247abc;
+			    box-shadow: 1px 5.33px 11px -4px #247abc;
+			    color: #f26529;	
+			    @media @below768{
+			    	width:33px;
+			    	height:33px;
+			    }
 	    	}
 	    }
 	    &:checked{
