Made text changes to goals till vacation

--- a/app/modules/goals/modules/jewellery/views/jewelleryStarted.html
+++ b/app/modules/goals/modules/jewellery/views/jewelleryStarted.html
@@ -2,7 +2,7 @@
     <form name="quickInvestForm1" novalidate>
         <div class="content-main-header">
             <div class="slider-entry-image">
-                <img src="assets/images/luxurious.png">
+                <img src="assets/images/jewellery.svg">
             </div>
             <h1 class="pull-left slider-description">Jewellery</h1>
             <!-- <h2 class="pull-left">Pamper yourself with some fashionable jewellery and let finances<span class="nextline">not force you to make a compromise</span></span></h2> -->
