--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -55,7 +55,7 @@
 					<div class="image-div">
 						<img src="assets/images/specifyGoals.png">
 					</div>
-					<button click-redirect="/goals" class="fin-app-btn fin-blue full-width">Set Financial Goals</button>
+					<button click-redirect="/goals" class="fin-app-btn fin-blue full-width">Plan Financial Goals</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Save for a financial goal like Retirement,<span class="nextline">Education, Vacation, etc.</span></p> -->
