--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -214,7 +214,10 @@ section{
   width:100%;
   float:left;
   .slider-entry-image{
-    /*width:10%;*/
+    width:10%;
+    @media @below768{
+    	width: 25%;
+    }
     float:left;
     img{
       width:100%;
