--- a/less/swiper.less
+++ b/less/swiper.less
@@ -177,7 +177,12 @@
                 position: relative;
                 left: 0;
               }
+
             }
+            i{
+                opacity: 0.5;
+                font-size: 0.8em;
+              }
           }
         }
       }
