--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3241,6 +3241,21 @@ span.error-text {
     left: 0;
   }
 }
+.swiper-container.customSwiper.retirement .swiper-slide .question i,
+.swiper-container.customSwiper.education .swiper-slide .question i,
+.swiper-container.customSwiper.property .swiper-slide .question i,
+.swiper-container.customSwiper.automobile .swiper-slide .question i,
+.swiper-container.customSwiper.vacation .swiper-slide .question i,
+.swiper-container.customSwiper.wedding .swiper-slide .question i,
+.swiper-container.customSwiper.jewellery .swiper-slide .question i,
+.swiper-container.customSwiper.others .swiper-slide .question i,
+.swiper-container.customSwiper.taxsaving .swiper-slide .question i,
+.swiper-container.customSwiper.investorInfo .swiper-slide .question i,
+.swiper-container.customSwiper.bankInfo .swiper-slide .question i,
+.swiper-container.customSwiper.nomineeInfo .swiper-slide .question i {
+  opacity: 0.5;
+  font-size: 0.8em;
+}
 .swiper-container.customSwiper.education .typeSwiper {
   width: 84px;
 }
@@ -4448,8 +4463,13 @@ section.quickInvest .started {
   float: left;
 }
 .content-main-header .slider-entry-image {
-  /*width:10%;*/
+  width: 10%;
   float: left;
+}
+@media only screen and (max-width:768px) {
+  .content-main-header .slider-entry-image {
+    width: 25%;
+  }
 }
 .content-main-header .slider-entry-image img {
   width: 100%;
