--- a/app/modules/goals/modules/property/views/propertyStarted.html
+++ b/app/modules/goals/modules/property/views/propertyStarted.html
@@ -6,7 +6,7 @@
             </div>
             <h1 class="pull-left slider-description">Property</h1>
             <!-- <h2 class="pull-left">Home where the heart is.Invest for that dream home or the weekend farmhouse<span class="nextline">that you always wanted,and let finances not force you to make a compromise.</span></span></h2> -->
-            <h2 class="pull-left"><strong><i>Home is where the heart is</i></strong><span class="nextline paddingTop2">Invest for that dream home or the weekend farmhouse you always <span class="nextline">wanted, and let finances not force you to make a compromise.</span></span>
+            <h2 class="pull-left"><strong><i>Home is where the heart is!</i></strong><span class="nextline paddingTop2">Invest for that dream home or the weekend farmhouse you always <span class="nextline">wanted, and let finances not force you to make a compromise.</span></span>
         </div>                
         <div class="radio-cover">
             <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
